@@ -1,3 +1,8 @@
+2003-07-17  Daniel Steffen  <das@users.sourceforge.net>
+
+	* macosx/Makefile: added var to allow overriding of tclsh used
+	during html help building (Landon Fuller).
+
 2003-07-16  Mumit Khan  <khan@nanotech.wisc.edu>
 
 	* generic/tclIOUtil.c (SetFsPathFromAny): Add Cygwin specific
